--- a/news-api/src/components/view/sources/sources.css
+++ b/news-api/src/components/view/sources/sources.css
@@ -1,21 +1,24 @@
 .sources {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: 100%;
-    height: 120px;
-    overflow: auto;
+    justify-content: center;
+    height: 130px;
+    overflow-x: hidden;
+    overflow-y: scroll;
     align-items: center;
-    font: 300 1em 'Fira Sans', sans-serif;
+    font: 300 1.3em Robinson Press, sans-serif;
+    scroll-behavior: smooth;
 }
 
 .source__item {
-    background: none;
-    border: 2px solid #30c5ff;
+    background: white;
+    border-radius: 10px;
     font: inherit;
     line-height: 1;
-    margin: 0.5em;
-    padding: 1em 2em;
-    color: #70d6ff;
+    margin: 0.4em;
+    padding: 0.5em 1em;
+    color: rgb(60, 60, 60);
     transition: 0.25s;
     cursor: pointer;
 }
@@ -23,8 +26,9 @@
 .source__item:hover,
 .source__item:focus {
     border-color: #3fcc59;
-    color: #69db7e;
-    box-shadow: 0 0.5em 0.5em -0.4em #3fcc59;
+    color: white;
+    text-shadow: -2px -3px 2.1px grey, 0px -2px 1px grey, -2px 0px 0 grey, -1px 1px 0 grey;
+    box-shadow: 0 0.5em 0.5em -0.4em whitesmoke;
     transform: translateY(-0.25em);
 }
 
