--- a/news-api/src/components/view/news/news.css
+++ b/news-api/src/components/view/news/news.css
@@ -46,6 +46,7 @@
     margin: auto;
     transition: left 0.2s;
     background: rgba(0, 0, 0, 0.6);
+    font-family: Tahoma;
     color: #fff;
     padding: 10px;
     width: 100%;
@@ -62,12 +63,14 @@
 .news__item .news__description h2 {
     line-height: 1;
     margin: 0;
-    font-size: 1.7rem;
+    font-size: 2.5rem;
+    font-family: Robinson Press;
 }
 
 .news__item .news__description h3 {
-    font-size: 1rem;
-    font-weight: 300;
+    font-size: 1.5rem;
+    font-weight: 100;
+    font-family: 'Robinson Press';
     text-transform: uppercase;
     color: #a2a2a2;
     margin-top: 5px;
@@ -78,9 +81,14 @@
 }
 
 .news__item .news__description .news__read-more a {
-    color: #5ad67d;
+    color: #333;
     display: inline-block;
+    font-family: 'Robinson Press';
     position: relative;
+    padding: 4px;
+    font-size: 2em;
+    border-left: 1px solid #333;
+    border-radius: 14px;
     text-decoration: none;
     font-weight: 800;
 }
@@ -103,6 +111,8 @@
 }
 
 .news__item p:first-of-type {
+    font-family: Tahoma;
+    font-weight: 700;
     margin-top: 1.25rem;
     position: relative;
 }
@@ -110,9 +120,9 @@
 .news__item p:first-of-type:before {
     content: '';
     position: absolute;
-    height: 5px;
-    background: #5ad67d;
-    width: 35px;
+    height: 2px;
+    background: #333;
+    width: 100%;
     top: -0.75rem;
     border-radius: 3px;
 }
@@ -124,7 +134,7 @@
 @media (min-width: 640px) {
     .news__item {
         flex-direction: row;
-        max-width: 700px;
+        max-width: 900px;
     }
 
     .news__item .news__meta {
