--- a/news-api/src/components/view/sources/sources.css
+++ b/news-api/src/components/view/sources/sources.css
@@ -3,12 +3,15 @@
     flex-wrap: wrap;
     width: 100%;
     justify-content: center;
-    height: 130px;
+    height: 230px;
     overflow-x: hidden;
     overflow-y: scroll;
     align-items: center;
     font: 300 1.3em Robinson Press, sans-serif;
     scroll-behavior: smooth;
+    border: 1px solid rgb(141 142 221 / 55%);
+    border-radius: 20px;
+    box-shadow: 0px 2px 8px 2px rgb(141 142 221 / 63%);
 }
 
 .source__item {
