feat: change style for better look

--- a/news-api/src/components/view/sources/sources.css
+++ b/news-api/src/components/view/sources/sources.css
@@ -20,6 +20,7 @@
     font: inherit;
     line-height: 1;
     margin: 0.4em;
+    font-size: 28px;
     padding: 0.5em 1em;
     color: rgb(60, 60, 60);
     transition: 0.25s;
