--- a/news-api/src/global.css
+++ b/news-api/src/global.css
@@ -9,28 +9,34 @@ body {
     font-family: Robinson Press;
 }
 
+main{
+    margin: 20px;
+}
+
 header {
     text-align: center;
     padding: 10px 30px;
 }
 
 header h1 {
-    font-size: 60px;
+    font-size: 80px;
     font-weight: 300;
 }
 
 header p{
-    font-size: 24px;
+    font-size: 36px;
 }
 
 .alphabet-characters{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     list-style: none;
-    gap: 20px;
+    gap: 30px;
     font-size: 1.5em;
+    font-size: 28px;
     padding: 0;
 }
 
@@ -50,14 +56,14 @@ footer {
 }
 footer .copyright {
     font-size: 14px;
-    color: #333;
+    color: #555;
     text-align: center;
 }
 footer .copyright a {
-    color: #444;
+    color: #666;
 }
 footer .copyright a:hover {
-    color: #555;
+    color: #777;
 }
 footer .copyright:before {
     content: '©';
