--- a/news-api/src/global.css
+++ b/news-api/src/global.css
@@ -48,11 +48,22 @@ header p{
     cursor: pointer;
 }
 
+.rs-logo{
+    width: 100px;
+    height: 50px;
+}
+
+.git-logo{
+    width: 50px;
+    height: 50px;
+  }
+
 footer {
+    margin-top: 100px;
     height: 100px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 footer .copyright {
     font-size: 14px;
